[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = 5.0
margin_right = 2.0
margin_bottom = -1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.972549, 0.956863, 0.956863, 1 )
margin_left = 2.58578
margin_top = -1.57758
margin_right = 1022.59
margin_bottom = 593.423
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel"]
margin_left = 166.149
margin_top = 55.61
margin_right = 248.149
margin_bottom = 86.61
text = "update"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="showb" type="Button" parent="Panel"]
margin_left = 342.0
margin_top = 172.0
margin_right = 414.0
margin_bottom = 204.0
text = "Show"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="list" type="RichTextLabel" parent="."]
margin_left = 450.0
margin_top = 81.0
margin_right = 737.0
margin_bottom = 517.0
focus_mode = 2
mouse_default_cursor_shape = 4
fit_content_height = true
scroll_following = true
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 435.0
margin_top = 74.0
margin_right = 449.0
margin_bottom = 526.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator2" type="VSeparator" parent="."]
margin_left = 740.47
margin_top = 75.4142
margin_right = 754.47
margin_bottom = 527.414
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 457.0
margin_top = 40.0
margin_right = 664.0
margin_bottom = 92.0
tab_size = 0
text = "	                                                                   Packages in Repo
										"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 769.213
margin_top = 53.9706
margin_right = 912.213
margin_bottom = 89.9706
tab_size = 0
text = "Installed Packages"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="refresh" type="Button" parent="."]
margin_left = 447.0
margin_top = 50.0
margin_right = 507.0
margin_bottom = 76.0
hint_tooltip = "It will show how many Packages are in server"
text = "Refresh"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Refresh
"
}

[node name="HSeparator" type="HSeparator" parent="."]
margin_left = 445.0
margin_top = 74.0
margin_right = 1019.0
margin_bottom = 78.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="."]
margin_left = 444.0
margin_top = 523.0
margin_right = 1019.0
margin_bottom = 530.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pag" type="LineEdit" parent="."]
margin_left = 5.17157
margin_top = 112.428
margin_right = 338.172
margin_bottom = 152.428
__meta__ = {
"_edit_use_anchors_": false
}

[node name="infoline" type="LineEdit" parent="."]
margin_left = 6.58578
margin_top = 164.754
margin_right = 339.586
margin_bottom = 204.754
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Install" type="Button" parent="."]
margin_left = 348.878
margin_top = 121.68
margin_right = 412.878
margin_bottom = 149.68
text = "INSTALL"

[node name="update" type="RichTextLabel" parent="."]
margin_left = 2.27211
margin_top = 60.48
margin_right = 177.272
margin_bottom = 85.48
text = "  Update Amzx-Manager"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 48.0
margin_top = 49.0
margin_right = 1009.0
margin_bottom = 585.0
custom_colors/folder_icon_modulate = Color( 0.0470588, 0.0196078, 0.87451, 1 )
custom_colors/files_disabled = Color( 0.992157, 0.0196078, 0.0196078, 1 )
custom_colors/file_icon_modulate = Color( 0.0392157, 0.984314, 0.968627, 1 )
popup_exclusive = true
window_title = "Open a File"
resizable = true
dialog_text = "Select .Amzx file"
dialog_hide_on_ok = true
mode = 0
access = 2
show_hidden_files = true
current_dir = "/home/amzker/Desktop/os/OLD/extra/myapps/Amzx-Manager"
current_path = "/home/amzker/Desktop/os/OLD/extra/myapps/Amzx-Manager/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cache" type="Button" parent="."]
margin_left = 682.226
margin_top = 545.941
margin_right = 819.226
margin_bottom = 585.941
text = "clear  cache"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="current" type="RichTextLabel" parent="."]
margin_left = 5.20792
margin_top = 1.65685
margin_right = 288.208
margin_bottom = 41.6568
text = "Current Amzx-Manager Version : 0.4 stable"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sr" type="RichTextLabel" parent="."]
margin_left = 7.0
margin_top = 26.0
margin_right = 243.0
margin_bottom = 66.0
text = "Amzx-Manager Actual  version : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="srver" type="RichTextLabel" parent="."]
margin_left = 207.828
margin_top = 15.6568
margin_right = 367.828
margin_bottom = 50.6568
__meta__ = {
"_edit_use_anchors_": false
}

[node name="srvreq" type="HTTPRequest" parent="."]

[node name="updatepkg" type="Button" parent="."]
margin_left = 650.586
margin_top = 46.7574
margin_right = 724.586
margin_bottom = 76.7574
hint_tooltip = "will update list of Packages in server"
text = "UPDATE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="instpkg" type="RichTextLabel" parent="."]
margin_left = 751.0
margin_top = 89.0
margin_right = 1008.0
margin_bottom = 509.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="infopkg" type="RichTextLabel" parent="."]
margin_left = 15.3431
margin_top = 209.757
margin_right = 412.343
margin_bottom = 582.757
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/showb" to="." method="_on_showb_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="refresh" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="Install" to="." method="_on_Install_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="cache" to="." method="_on_cache_pressed"]
[connection signal="request_completed" from="srvreq" to="." method="_on_srvreq_request_completed"]
[connection signal="pressed" from="updatepkg" to="." method="_on_updatepkg_pressed"]
